Podcast page added

--- a/index.html
+++ b/index.html
@@ -108,8 +108,12 @@
 					<a href="#hero">Top / Table of Contents</a>
 				</li>
 				<div class="dropdown">
-					<li class="dropbtn">Miscellaneous</li>
+					<li class="dropbtn">Podcast / Misc.</li>
 					<ul class="dropdown-content">
+						<li>
+							<a href="roopodcast.html">My Youtube Podcast</a>
+						</li>
+						<br>
 						<li>
 							<a href="roochildren.html">Children that Time Forgot</a>
 						</li>
@@ -182,7 +186,7 @@
 			<a href="index.html">
 				<img src="images/BannerNEW.png" title="Link to Homepage" alt="RASSILON OMEGA AND THAT OTHER GUY">
 			</a>
-			<h1>20th Anniversary Special Edition</h1>
+			<h1>Happy 60th Anniversary to Doctor Who!</h1>
 		</div>
 			<figure id="homepage">
 				<img src="images/omniscate.bmp" title="Seal of Rassilon" alt="Seal of Rassilon">
@@ -195,55 +199,18 @@
 			</div>
 			<br>
 		<div class="article">
-			<img src="images/dwlogo.png" alt="Dr Who Logo" class="lead cf">
-			<h2>YOUTUBE PODCAST:</h2>
+			<figure>
+				<img src="images/podcast.JPG" title="Podcast Picture" alt="Podcast Pic">
+			</figure>
+			<div class="indexlinks">
+				<img src="images/dwlogo.png" alt="Dr Who Logo" class="lead cf">
+				<a href="roopodcast.html">YOUTUBE PODCAST</a>
+			</div>
 			<div class="section">
-				<span class="A-fanon">Rassilon, Omega, and that Other Guy now has a weekly podcast! Check it out, its filled with Time Lore goodness.  All episodes at <a href="youtube.com/@rassilonomegaotherguy" target="_blank">youtube.com/@rassilonomegaotherguy</a> 
-					<br> 
-					<a href="https://youtu.be/8fQloEtOq6E" target="_blank">Ep 1: Auld Mortality</a> 
-					<br> 
-					<span class="A-fanon">A look at the Big Finish Audio Drama 'Auld Mortality,' the Great Houses of Gallifrey, the House of Lunbarrow, and the TARDIS Time Scanner. </span>
-					<br> 
-					<a href="https://youtu.be/m_JLrmxLdcI" target="_blank">Ep 2: Full Circle</a> 
-					<br> 
-					<span class="A-fanon">A look at the TV Story 'Full Circle,' the possible nature of primeval Gallifrey, and the TARDIS Homing Beacon.    </span>
-					<br> 
-					<a href="https://youtu.be/d8KCsU_DZCU" target="_blank">Ep 3: A Storm of Angels</a> 
-					<br> 
-					<span class="A-fanon">A look at the Big Finish Story 'A Storm of Angels,' the nature of the position of Lord President of Gallifrey, and TARDIS Parallel Control.</span>
-					<br> 
-					<a href="https://youtu.be/BPUJeqkDQI0" target="_blank">Ep 4: The Power of the Doctor</a> 
-					<br> 
-					<span class="A-fanon">A look at the TV Special 'The Power of the Doctor,' the Guardians of the Edge, and Type 70 - 76 TARDISes.    </span>
-					<br> 
-					<a href="https://youtu.be/KC1LEKkvO_0" target="_blank">Ep 5: The Stolen TARDIS</a> 
-					<br> 
-					<span class="A-fanon">A look at the comic 'The Stolen TARDIS,' the Planet Gallifrey, the Flora and Fauna of Gallifrey, and TARDIS Temporal Drift.</span>
-					<br> 
-					<a href="https://youtu.be/FMoK2_pLjus" target="_blank">Ep 6: The Beginning</a> 
-					<br> 
-					<span class="A-fanon">A look at how the Doctor left Gallifrey, the Doctor Who audio 'The Beginning,' the reasons the Doctor left Gallifrey, the mystery of his original name, and the TARDIS Switch Room.</span>
-					<br> 
-					<a href="https://youtu.be/YNO0L9cN1kE" target="_blank">Ep 7: An Unearthly Woman</a> 
-					<br> 
-					<span class="A-fanon">A look at the audio 'An Unearthly Woman,' the Dr's time at 76 Totter's Lane, TARDIS Power Cells, and the identity of I.M. Foreman?</span>
-					<br> 
-					<a href="https://youtu.be/aJ3_6CcQ9aw" target="_blank">Ep 8: An Unearthly Child</a> 
-					<br> 
-					<span class="A-fanon">A look at the first story, 'An Unearthly Child'. We also tackle the Gallifreyan process of Brainbuffing, and the TARDIS's Isomorphic Security System. </span>
-					<br> 
-					<a href="https://youtu.be/hmPfkGCxhj4" target="_blank">Ep 9: The Three Brothers Gruff</a> 
-					<br> 
-					<span class="A-fanon">A look at the Time Lord Fairy Tale 'The Three Brothers Gruff' and early Gallifreyan History. We also tackle Shobogan biology, and the TARDIS's Autocleaning Systems.   </span>
-					<br> 
-					<a href="https://youtu.be/IRucOlmMEb0" target="_blank">Ep 10: Jak and the Wormhole</a> 
-					<br> 
-					<span class="A-fanon">A look at the Time Lord Fairy Tale 'Jak and the Wormhole' and more early Gallifreyan History. We also discuss Tecteun's great voyage, and TARDIS Vortex Wormholes.  </span>
-					<br> 
-					<a href="https://youtu.be/YMNdCX4KyVM" target="_blank">Ep 11: The Star Beast</a> 
-					<br> 
-					<span class="A-fanon">A look at the 60th Anniversary special, 'The Star Beast'. We also discuss stories that happened more than once, and the TARDIS Desk-Top Theme controls. </span>
-				</span>
+				<a href="roopodcast.html">My Youtube Podcast</a> <span class="A-fanon">Rassilon, Omega, and that Other Guy now has a weekly podcast! Check it out, its filled with Time Lore goodness. </span>
+				<span class="A-fanon">All episodes at </span><a href="https://www.youtube.com/@rassilonomegaotherguy" target="_blank">https://www.youtube.com/@rassilonomegaotherguy</a> 
+				<br> 
+				<a href="https://youtu.be/YMNdCX4KyVM" target="_blank">Ep 11: The Star Beast</a> <span class="A-fanon">Our latest episode! A look at the 60th Anniversary special, 'The Star Beast'. We also discuss stories that happened more than once, and the TARDIS Desk-Top Theme controls. </span>
 			</div>
 		</div>
 		<div class="article">
