--- a/roobiology.html
+++ b/roobiology.html
@@ -107,8 +107,12 @@
 					<a href="#table">Top / Table of Contents</a>
 				</li>
 				<div class="dropdown">
-					<li class="dropbtn">Miscellaneous</li>
+					<li class="dropbtn">Podcast / Misc</li>
 					<ul class="dropdown-content">
+						<li>
+							<a href="roopodcast.html">My Youtube Podcast</a>
+						</li>
+						<br>
 						<li>
 							<a href="roochildren.html">Children that Time Forgot</a>
 						</li>
@@ -1219,7 +1223,7 @@ regeneration </span>and could live forever, if they avoided accidents.</span>
 a deserted world on the far edge of another galaxy Gallifrey's first
 space traveller, the Shobogan Tecteun, discovered a gateway to another
 dimension or<span class="A-game"> inexplicable alternative</span>
-universe. Near this gate she found a male child (later known as the
+universe. Near this gate she found a&nbsp;child (later known as the
 Doctor) who had been thrown through the gateway and abandoned. This
 child was capable of regenerating their entire body whenever they were
 on the point of death and became known as the Timeless Child. <span class="A-fanon">Like the Untempered Schism, the gateway might have surrounded </span>the Child's</span><span class="A-audiobook"> body with bio-plasmic fields of <span class="A-tv">regenerative</span> chronon <span class="A-tv">energy. </span></span><span class="A-audiobook">Tectaun realized that the Child's abilities were connected to the immortal, self-regenerating nature of the Universe. Studying <span class="A-fanon">the defiance of the thermodynamics of </span>this phenomenon eventually led </span><span class="A-tv">Tecteun to devise a way to splice into herself&nbsp;<span class="A-game">the genes to give her</span> the ability to regenerate. </span><span class="A-notbbc">In order to extend the already long Gallifreyan lifespan, </span><span class="A-tv">the
