--- a/rootimeline2.html
+++ b/rootimeline2.html
@@ -107,8 +107,12 @@
 					<a href="#table">Top / Table of Contents</a>
 				</li>
 				<div class="dropdown">
-					<li class="dropbtn">Miscellaneous</li>
+					<li class="dropbtn">Podcast / Misc</li>
 					<ul class="dropdown-content">
+						<li>
+							<a href="roopodcast.html">My Youtube Podcast</a>
+						</li>
+						<br>
 						<li>
 							<a href="roochildren.html">Children that Time Forgot</a>
 						</li>
